// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroBody component test should render without crash with props 1`] = `
<div
  className="hero-body heroBody CLass"
/>
`;

exports[`HeroBody component test should render without crash without props 1`] = `
<div
  className="hero-body "
/>
`;
